添加新组件和配置文件
- 添加Claude设置文件
- 添加微服务数据库设计文档
- 添加订单状态和积分操作类型枚举
- 添加订单处理状态机类
- 添加网关启动配置文件
- 添加用户实体和支付服务实现
- 更新.gitignore以排除muying-web(嵌入仓库)和nul文件

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Temporarily ignore muying-web (embedded git repository)
+muying-web/
+
+# Ignore nul file (Windows reserved name)
+nul
