build(core): 添加工具类依赖到core模块
- 添加JWT相关依赖(jjwt-api, jjwt-impl, jjwt-jackson)
- 添加Spring Data Redis依赖
- 添加Spring Security Core依赖
- 所有依赖使用provided作用域避免传递依赖冲突

提交人：青柠檬
提交时间：2025-09-23 19:34:19

--- a/muying-mall-common/muying-mall-common-core/pom.xml
+++ b/muying-mall-common/muying-mall-common-core/pom.xml
@@ -105,6 +105,37 @@
             <artifactId>poi-ooxml</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- JWT (JJWT) -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+        <!-- Spring Data Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+        <!-- Spring Security (for security utils) -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
