feat(common-core): 完善核心模块功能和兼容性
- 更新pom.xml依赖配置，优化模块依赖关系
- 完善JwtUtils工具类，增强JWT令牌处理功能
- 优化SecurityUtils安全工具类，提升安全性
- 新增JwtUtilsCompat兼容类，保持向后兼容性
- 规范代码格式和注释，提升代码质量

相关需求: 6.1, 6.2 - 核心模块重构和兼容性支持

--- a/muying-mall-common/muying-mall-common-core/pom.xml
+++ b/muying-mall-common/muying-mall-common-core/pom.xml
@@ -136,6 +136,13 @@
             <artifactId>spring-security-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
