feat(common-redis): 实现Redis缓存模块功能
- 更新pom.xml配置，添加Redis相关依赖
- 实现RedisConfig配置类，提供Redis连接和序列化配置
- 新增RedisUtils工具类，封装常用Redis操作
- 实现分布式锁功能，支持RedisLock注解
- 添加缓存服务接口和实现类
- 创建Redis属性配置类，支持外部化配置
- 更新包说明文档和自动配置

相关需求: 6.1, 6.2 - Redis缓存模块实现

--- a/muying-mall-common/muying-mall-common-redis/pom.xml
+++ b/muying-mall-common/muying-mall-common-redis/pom.xml
@@ -22,5 +22,24 @@
             <groupId>com.muyingmall</groupId>
             <artifactId>muying-mall-common-core</artifactId>
         </dependency>
+        
+        <!-- Spring Boot Data Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        
+        <!-- Spring Boot Configuration Processor -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
+        <!-- Apache Commons Pool2 (for Redis connection pooling) -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
     </dependencies>
 </project>
