feat(common-security): 实现安全认证模块
- 更新pom.xml配置，添加Spring Security和JWT依赖
- 实现JwtUtils工具类，提供JWT令牌生成和验证功能
- 新增SecurityUtils安全工具类，封装安全相关操作
- 创建PasswordEncoder密码加密工具
- 实现RequirePermission权限注解，支持方法级权限控制
- 添加SecurityProperties配置类，支持外部化配置
- 创建SecurityAutoConfiguration自动配置类
- 更新包说明文档，提供安全使用指南

相关需求: 6.1, 6.2 - 安全认证模块实现

--- a/muying-mall-common/muying-mall-common-security/pom.xml
+++ b/muying-mall-common/muying-mall-common-security/pom.xml
@@ -22,5 +22,43 @@
             <groupId>com.muyingmall</groupId>
             <artifactId>muying-mall-common-core</artifactId>
         </dependency>
+        
+        <!-- JWT (JJWT) -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+        </dependency>
+        
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+        
+        <!-- Spring Boot Configuration Processor -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
+        <!-- Spring Boot Starter Web (for security annotations) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
