--- a/muying-mall-gateway/pom.xml
+++ b/muying-mall-gateway/pom.xml
@@ -59,10 +59,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         
-        <!-- 公共模块 -->
+        <!-- 公共模块 - 使用聚合模块确保向后兼容 -->
         <dependency>
             <groupId>com.muyingmall</groupId>
-            <artifactId>muying-mall-common</artifactId>
+            <artifactId>muying-mall-common-all</artifactId>
+            <version>1.0.0</version>
         </dependency>
         
         <!-- JSON处理 -->
