refactor(modules): 更新所有业务模块依赖配置
- 更新所有业务模块pom.xml，适配重构后的common模块结构
- 优化用户模块PointsOperationServiceImpl实现
- 完善搜索模块SearchService功能
- 统一依赖管理，使用新的模块化架构
- 确保所有业务模块与新common模块的兼容性

涉及模块:
- muying-mall-user: 用户管理模块
- muying-mall-product: 商品管理模块
- muying-mall-order: 订单管理模块
- muying-mall-payment: 支付管理模块
- muying-mall-search: 搜索服务模块
- muying-mall-logistics: 物流管理模块
- muying-mall-comment: 评论管理模块
- muying-mall-points: 积分管理模块
- muying-mall-admin: 管理后台模块

相关需求: 6.1, 6.2 - 业务模块依赖更新

--- a/muying-modules/muying-mall-product/pom.xml
+++ b/muying-modules/muying-mall-product/pom.xml
@@ -88,10 +88,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
         </dependency>
         
-        <!-- 公共模块 -->
+        <!-- 公共模块 - 使用聚合模块确保向后兼容 -->
         <dependency>
             <groupId>com.muyingmall</groupId>
-            <artifactId>muying-mall-common</artifactId>
+            <artifactId>muying-mall-common-all</artifactId>
+            <version>1.0.0</version>
         </dependency>
         
         <!-- JSON处理 -->
