--- a/muying-modules/muying-mall-logistics/pom.xml
+++ b/muying-modules/muying-mall-logistics/pom.xml
@@ -6,18 +6,19 @@
 
     <parent>
         <groupId>com.muyingmall</groupId>
-        <artifactId>muying-mall-microservices</artifactId>
+        <artifactId>muying-modules</artifactId>
         <version>1.0.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>muying-mall-logistics</artifactId>
 
     <dependencies>
-        <!-- Common Module -->
+        <!-- 公共模块 - 使用聚合模块确保向后兼容 -->
         <dependency>
             <groupId>com.muyingmall</groupId>
-            <artifactId>muying-mall-common</artifactId>
+            <artifactId>muying-mall-common-all</artifactId>
             <version>1.0.0</version>
         </dependency>
 
